# yet_another_tetris_clone

./: .clang-format  .gitignore  CMakeLists.txt  README.md  devlog.md  makefile
src/: 30_scrolling.cpp  color.h  constant.h  controller.cpp  controller.h  counter.cpp  counter.h  dot.cpp  dot.h  game.cpp  game.h  globals.h  grid.cpp  grid.h  in_game_menu.cpp  in_game_menu.h  input.cpp  input.h  l_texture.cpp  l_texture.h  main.cpp  main_game_scene.cpp  main_game_scene.h  scene.h  scene_maganer.cpp  scene_maganer.h  scene_manager.cpp  scene_manager.h  scene_type.h  sdl_engine.cpp  sdl_engine.h  sound.cpp  sound.h  tetramino.cpp  tetramino.h  tetromino.cpp  tetromino.h  tetromino_creator.h  tetromino_data.cpp  tetromino_data.h  (+12 more)
